actualizando index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <body>
-  <h1>Soy Santi!</h1>
+  <h1>Santi's website</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://steamuserimages-a.akamaihd.net/ugc/911291374708016579/1734590F9B2B21B3207086EAC7FC0794C8B7FB32/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" />
 </body>
 
 </html>
